<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>net.jradius</groupId>
  <artifactId>jradius-ssl</artifactId>
  <name>${project.artifactId}-${project.version}</name>
  <version>1.1.3-SNAPSHOT</version>
  <description>JRadius SSL Impl</description>
  
  <parent>
    <groupId>net.jradius</groupId>
    <artifactId>jradius</artifactId>
    <version>1.1.5-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  
  <dependencies>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
	<plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-compiler-plugin</artifactId>
	    <version>3.8.0</version>
	    <configuration>
		<release>11</release>
	    </configuration>
	</plugin>
	<plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-surefire-plugin</artifactId>
	    <version>2.22.0</version>
	    <configuration>
		<argLine>
		    --illegal-access=permit
		</argLine>
	    </configuration>
	</plugin>
	<plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-failsafe-plugin</artifactId>
	    <version>2.22.0</version>
	    <configuration>
		<argLine>
		    --illegal-access=permit
		</argLine>
	    </configuration>
	</plugin>
    </plugins>
  </build>

</project>
